--- a/Kaiserreich Korean Translation/localisation/KR_Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Wallonia_l_english.yml
@@ -363,6 +363,11 @@ wll.102.d:0 "The Walloon government has approached us over the Walloon province 
 wll.102.a:0 "Return German Wallonia."
 wll.102.b:0 "To the victor, the spoils."
 
+wll.103.t:0 "Wallonia Requests Flanders"
+wll.103.d:0 "Wallonia, claiming all those lands once held by Belgium, has demanded that our nation transfer control over Flanders to them."
+wll.103.a:0 "Return Flanders."
+wll.103.b:0 "To the victor, the spoils."
+
 #Internationale
 
 wll.11.t:0 "Wallonia Requests Entry into the Internationale"
@@ -557,87 +562,87 @@ WLL_Demand_Our_Rightfull_Land_desc:0 "We won't settle for the humiliation impose
 WLL_Walloon_Expansion:0 "우알로니 확장"
 WLL_Walloon_Expansion_desc:0 "The lands of Wallonia abound with unharnessed potential. Let the land finally be put to work for those who labour on them. We should develop the basis of a new economic plan under which our economy can stand upon its own two feet."
 WLL_The_Sillon_Industriel:0 "The Sillon Industriel"
-WLL_The_Sillon_Industriel_desc:0 ""
-WLL_Direction_of_the_Industry:0 "Direction of the Industry"
+WLL_The_Sillon_Industriel_desc:0 "The Sillon Industriel is the industrial heartland of Wallonia, it's output unparalleled. However, the region saw a number of strikes under the Flandro-Walloon administration which disrupted production and destabilized the nation. It is pertinant therefore that we placate the people and industrial centers of the region with even more pronounced state support."
+WLL_Direction_of_the_Industry:0 "산업의 방향"
 WLL_Direction_of_the_Industry_desc:0 "Wallonia was the beating heart of Belgian industry. It cannot be denied that the fate of the forges and factories are intimately linked with that of the entire nation. Our industrial aparatus must be comprehensively assessed in order to facilitate its expansion."
 WLL_Double_Down_On_Heavy_Industry:0 "Double Down on Heavy Industry"
 WLL_Double_Down_On_Heavy_Industry_desc:0 "While our economy has evolved with the times, heavy industry has remained its foundation. We should further industrialise our nation, offering generous incentives for the development of new industrial zones in the nation's middling cities."
 WLL_Redefine_Walloon_Expertise:0 "Redefine Walloon Expertise"
-WLL_Redefine_Walloon_Expertise_desc:0 ""
-WLL_Future_Resource_Extraction:0 "Future Resource Extraction"
-WLL_Future_Resource_Extraction_desc:0 ""
+WLL_Redefine_Walloon_Expertise_desc:0 "Wallonia has long been one of Europe's foremost industrial regions, and our people possess skills relevant to such an economy. The winds of change blow strongly however, and we must adapt. To begin with, we should offer increased funding to the cutting-edge Solvay Research Institute."
+WLL_Future_Resource_Extraction:0 "미래 자원 채굴"
+WLL_Future_Resource_Extraction_desc:0 "The natural wealth of Wallonia was critical to its industrialisation. New extraction methods allow both long-exploited resources and those whose economic relevancy is yet emerging to be more effectively extracted. We must keep our ear to the ground and offer support to industries dealing with resource extraction for experimental ventures."
 WLL_Breakthrough_In_Engineering:0 "Breakthrough in Engineering"
-WLL_Breakthrough_In_Engineering_desc:0 ""
-WLL_Aviation_Industry:0 "Aviation Industry"
+WLL_Breakthrough_In_Engineering_desc:0 "New methods of building construction and optimisation allow industry to be more productive while consuming fewer resources. We should sponsor the redevelopment of older industrial facilities to take advantage oof these modern engineering techniques."
+WLL_Aviation_Industry:0 "항공기 산업"
 WLL_Aviation_Industry_desc:0 "Our nation cannot rely even on our closest of allies to supply sufficient aeroplanes in times of war. To have peace of mind at last, we must fund the construction of new state aircraft factories."
 WLL_Build_Our_Own_Cyclotron:0 "Build Our Own Cyclotron"
-WLL_Build_Our_Own_Cyclotron_desc:0 ""
-WLL_Expand_Seraing_Steel_Mills:0 "세랭 제철소 확장"
-WLL_Expand_Seraing_Steel_Mills_desc:0 ""
-WLL_Build_The_Liege_Charleroi_Highway:0 "리에주-샤를루아 고속도로 건설"
-WLL_Build_The_Liege_Charleroi_Highway_desc:0 ""
-WLL_Fund_University_of_Liege:0 "리에주 대학에 자금 지원"
-WLL_Fund_University_of_Liege_desc:0 ""
-WLL_German_Investements:0 "독일의 투자"
+WLL_Build_Our_Own_Cyclotron_desc:0 "Cyclotrons have been the primary means by which a plethora of new discoveries in the field of partical physics have come about. While expensive, with sufficient government funding, our nation can create a cyclotron of its own."
+WLL_Expand_Seraing_Steel_Mills:0 "Expand Seraing Steel Mills"
+WLL_Expand_Seraing_Steel_Mills_desc:0 "The city of Seraing, while not extremely populace and often overlooked, has become an important center of industry, particularly steel production. We should offer state support for the city's steel mills and work to turn them into the envy of the world."
+WLL_Build_The_Liege_Charleroi_Highway:0 "Build the Liege-Charleroi Highway"
+WLL_Build_The_Liege_Charleroi_Highway_desc:0 "Roadways between the industrial centers of Liege and Charleroi are woefully insufficient. We should build a long-proposed central motorway between them."
+WLL_Fund_University_of_Liege:0 "리에주 대학에 기금전달"
+WLL_Fund_University_of_Liege_desc:0 "Liège has been a center of learning since the middle ages, and today the city's primary university is perhaps our nation's most prestigious institution of higher learning. With further funding and integration of the institution into our military research and development system, our nation as a whole can further benefit."
+WLL_German_Investements:0 "독일의 지원"
 WLL_German_Investements_desc:0 "Our nation's connection to Germany has not only survived but continues to strengthen. Surely German investment is key to ensuring not only the end of our economic woes, but sustained growth into the distant future."
-WLL_Increase_German_Export:0 "Increase German Exports"
-WLL_Increase_German_Export_desc:0 ""
+WLL_Increase_German_Export:0 "독일로의 수출 증가"
+WLL_Increase_German_Export_desc:0 "Given our present political situation, German markets are more important to our national economy than ever. we should work with the Germans to decrease mutual barriers to trade and subsidise businesses which primarily export to Germany."
 WLL_Krupp_Wallonia:0 "크루프 우알로니"
-WLL_Krupp_Wallonia_desc:0 ""
+WLL_Krupp_Wallonia_desc:0 "The Krupp company's expertise in steel production has already a boon. With state support, Krupp can surely lead our steel industry into a golden age of productivity."
 WLL_Encourage_Frontaliers:0 "Encourage Frontaliers"
-WLL_Encourage_Frontaliers_desc:0 ""
+WLL_Encourage_Frontaliers_desc:0 "Many of our people work abroad in the nations of Mitteleuropa and send remitances home. This represents a sizable portion of our national economy, and while it hurts our industrial centers to some extent by shrinking the labor market, the increased disposable income this reality brings is surely economically beneficial. We should further encourage the practice and negotiate with Germany to reduce restrictions on individual Frontaliers."
 WLL_Create_The_Industrial_Commitee:0 "Create the Industrial Committee"
-WLL_Create_The_Industrial_Commitee_desc:0 ""
+WLL_Create_The_Industrial_Commitee_desc:0 "The nation's many great industrial companies compete vigorously for the slightest economic advantage. Through cooperation, perhaps these titans of industry could become even greater. We should establish an executive advisory board drawing from our largest industrial firms to forment economic policy and handle issues of international trade."
 WLL_Exploitation_of_Charleroi_Glass_Industry:0 "Exploit the Charleroi Glass Industry"
-WLL_Exploitation_of_Charleroi_Glass_Industry_desc:0 ""
+WLL_Exploitation_of_Charleroi_Glass_Industry_desc:0 "Charleroi is one of the foremost producers of glass in the world. While reclaiming the near monopoly the city had during the early industrial revolution is all but impossible, with national support, the city can regain its pre-eminence in glassmaking."
 
 WLL_Tumult_In_The_Army:0 "Tumult in the Army"
 WLL_Tumult_In_The_Army_desc:0 "The breakup of Flanders-Wallonia has left our military command and organisation in tatters. A new general staff must be hastily created and the situation dealt with by any means necessary."
 WLL_Form_Bilingual_Staff:0 "Form a Bilingual Staff"
 WLL_Form_Bilingual_Staff_desc:0 "While the legacy of German military control holds fast and thus that language cannot be fully abandoned, we can begin to reintroduce French as the primary language of instruction in military academies and promote bilingualism among the existant general staff."
 WLL_Retain_German_Staff:0 "Retain German Staff"
-WLL_Retain_German_Staff_desc:0 ""
-WLL_Trench_Warfare:0 "참호전"
-WLL_Trench_Warfare_desc:0 ""
-WLL_Panzer_Doctrine:0 "전차 교리"
-WLL_Panzer_Doctrine_desc:0 ""
+WLL_Retain_German_Staff_desc:0 "We contiue to throw our lot in with Germany, and the military competency of the Germans cannot be denied. To ensure that military operations function as smoothly as possible, we should retain our German general-staff with few concessions to French-speaking officers."
+WLL_Trench_Warfare:0 "Trench Warfare"
+WLL_Trench_Warfare_desc:0 "Untold numbers of men went to their deaths in the trenches of the Weltkrieg. Such a style of warfare, however, favors the defender. As a small nation, we are likely to be on the defensive and perhaps by expanding upon the tactics of the last war, our nation could fight toe to toe with giants."
+WLL_Panzer_Doctrine:0 "Panzer Doctrine"
+WLL_Panzer_Doctrine_desc:0 "British combined arms operations nearly proved the achilles heal of the German Empire in the Weltkrieg. Unlike so many foolish generals who would hide in their trenches, we see the promise of an army built around panzers. Now is the era of armoured warfare."
 WLL_FRC:0 "FRC Artillery Foundry"
-WLL_FRC_desc:0 ""
+WLL_FRC_desc:0 "The Fonderie Royale de Canons, like the renowned FN based out of Herstal, was the primary producer of artillery for Belgium and Flanders-Wallonia. With the need for artillery growing larger still since Walloon independence, the firm's manufacturies must be expanded."
 WLL_Luxembourg_Field_Hospitals:0 "Luxembourg Field Hospitals"
-WLL_Luxembourg_Field_Hospitals_desc:0 ""
+WLL_Luxembourg_Field_Hospitals_desc:0 "German military command in Spa has offered to fund a grand joint expansion of field hospital infrastructure in the Ardennes region directed through the main metropolitan hospital in Namur. We should take them up on the offer and get to work implimenting the plan."
 WLL_FN_Guns:0 "FN Arms Production"
-WLL_FN_Guns_desc:0 ""
-WLL_Light_Tank_Program:0 "경전차 프로그램"
-WLL_Light_Tank_Program_desc:0 ""
-WLL_Invest_in_Half_Tracks:0 "반궤도차량에 투자"
-WLL_Invest_in_Half_Tracks_desc:0 ""
+WLL_FN_Guns_desc:0 "Based in Herstal, the FN state company has produced cutting-edge firearms in massive quantities for decades. The turmoil of the Weltkrieg, however, has left the group with insufficient facilities to meet the demands of the nation and the world. We should fund the construction of an entirely new FN factory."
+WLL_Light_Tank_Program:0 "Light Tank Program"
+WLL_Light_Tank_Program_desc:0 "Light armour is both easy to produce in large quantities and capable of moving with blinding speed. To maximize agility, we should develop new tanks, that while small and lightly armoured, can execute complicated manoeuvres at a breakneck pace."
+WLL_Invest_in_Half_Tracks:0 "Invest in Half-Tracks"
+WLL_Invest_in_Half_Tracks_desc:0 "Half-tracks perform effectively both on roads and rough terrain and allow our infantry to keep pace with and support armoured united. We should subsidize factories which produce such vehicles."
 
 WLL_Project_Seagull:0 "Project Seagull"
 WLL_Project_Seagull_desc:0 "The noble coq does not fair well at sea; with a coastline now in our posession, we must adapt accordingly. We must learn to fly as the mighty seagulls do so over the majestic waves, developing a navy of our own."
 WLL_Study_with_the_Kaiserliche_Marine:0 "Study With the Kaiserliche Marine"
 WLL_Study_with_the_Kaiserliche_Marine_desc:0 "As we have maintained a strong relationship with Germany, we can directly study the administration and doctrine of the greatest naval force on the planet - the Kaiserliche Marine. The lessons we are to learn from such a venture are sure to be great!"
 WLL_Enlist_German_Officers:0 "Enlist German Officers"
-WLL_Enlist_German_Officers_desc:0 ""
+WLL_Enlist_German_Officers_desc:0 "With our commitment to Germany reaffirmed, we can draw on the immense manpower and know-how of the German Imperial Navy. With German assistance and German officers in our employ, our burgeoning navy will surely become a force to contend with."
 WLL_Establish_The_Merchant_Marine:0 "Establish the Merchant Marine"
-WLL_Establish_The_Merchant_Marine_desc:0 ""
+WLL_Establish_The_Merchant_Marine_desc:0 "A well-formed national merchant marine organisation is critical to the wartime transport of goods and services. With a coastline now in our possession, we should establish our own."
 WLL_Maritime_Commerce:0 "Boost Maritime Commerce"
-WLL_Maritime_Commerce_desc:0 ""
+WLL_Maritime_Commerce_desc:0 "The sea has always been the primary medium of international trade. Our newly won coastline now provides us with access to new promising locations. We should incentivise maritime traders to seek new markets for our goods to cement our place in the global market."
 WLL_Expand_Our_Drydocks:0 "Expand Our Drydocks"
-WLL_Expand_Our_Drydocks_desc:0 ""
+WLL_Expand_Our_Drydocks_desc:0 "Our naval expansion has placed great strain on the productive capacity of the existing infrastructure we have come to possess. We must build new drydocks and satisfy our national demand at long last."
 WLL_Commandeer_Trade_Vessels:0 "Commandeer Trade Vessels"
-WLL_Commandeer_Trade_Vessels_desc:0 ""
+WLL_Commandeer_Trade_Vessels_desc:0 "While the merchant marine operates many large ships, smaller vessels organized into makeshift conveys could serve a similar role. Due to our present need, we should requisition small trade ships and bring them fully under the governmental purview."
 
 WLL_The_Flying_Rooster:0 "The Flying Rooster"
-WLL_The_Flying_Rooster_desc:0 ""
+WLL_The_Flying_Rooster_desc:0 "Many falsely think the coq confined to earth. Let us make like a proud rooster and spread our wings, establishing a truly modern air force."
 WLL_Spreads_His_Wings:0 "Spreads Its Wings"
-WLL_Spreads_His_Wings_desc:0 ""
+WLL_Spreads_His_Wings_desc:0 "While some may argue that the air force should primarily work to support our forces on the ground, we know that force that cannot control its own skies is nothing. It is pertinant that we focus on the development of new fighter models to ensure air supremacy."
 WLL_Dives_Down:0 "Dives Down"
-WLL_Dives_Down_desc:0 ""
-WLL_Air_Defence_of_the_Territory:0 "Territorial Air Defence"
-WLL_Air_Defence_of_the_Territory_desc:0 ""
-WLL_Invest_in_RADAR:0 "Invest in RADAR"
-WLL_Invest_in_RADAR_desc:0 ""
-WLL_Fighter_Supremacy:0 "Fighter Supremacy"
-WLL_Fighter_Supremacy_desc:0 ""
-WLL_Bomber_Supremacy:0 "Bomber Supremacy"
-WLL_Bomber_Supremacy_desc:0 ""
+WLL_Dives_Down_desc:0 "Control of the air is certainly important, but focusing entirely on such is foolish. Wars are ultimately won and lost on the ground. We must develop planes capable of properly supporting the troops."
+WLL_Air_Defence_of_the_Territory:0 "영공 수호"
+WLL_Air_Defence_of_the_Territory_desc:0 "No matter how skilled our pilots or numerous our planes, some enemies may elude them. We must have a network of anti-air emplacements throughout the nation."
+WLL_Invest_in_RADAR:0 "레이다 투자"
+WLL_Invest_in_RADAR_desc:0 "RADAR gained widespread usage in the detection of enemy aircraft. To allow our emplacements to detect enemies in the ever-changing landscape of modern war, we must be on the cutting edge of RADAR technology."
+WLL_Fighter_Supremacy:0 "전투기 우세"
+WLL_Fighter_Supremacy_desc:0 "To ensure our dominion over our own skies, we must double down and make yet another effort to develop fighter aircraft."
+WLL_Bomber_Supremacy:0 "폭격기 우세"
+WLL_Bomber_Supremacy_desc:0 "Bombers can weaken the enemy's ability to effectively fight. With new and improved bomber aircraft and effective ground support, our men on the ground will be unstoppable."
