--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -69,9 +69,9 @@ worldnews.16.t:0 "칠레-아르헨티나 전쟁!"
 worldnews.16.d:0 "이념적 차이가 두 나라 사이를 점점 더 멀어지게 만들면서 두 지역 강대국 사이에 긴장이 고조되어 왔습니다. 아르헨티나 육군과 아르마다가 연합공격을 하자 파타고니아의 FOP에 대한 칠레의 지지와 반란을 진압하기 위한 아르헨티나의 무능함이 마침내 타격을 받았으며 리오 네그로에서는 칠레 군대가 진격하고 있는 아르헨티나군에 대해 발포했습니다."
 worldnews.16.a:0 "문제가 발생했군."
 
-worldnews.17.t:0 "아랍 회의"
-worldnews.17.d:0 "세계대전 때 아랍 반란은 주로 협상국의 패배로 인해 실패하였고, 레반트와 이라크에 살고있는 수백만의 아랍인들은 오스만 제국의 지배하에 있었습니다. 그럼에도 불구하고 아랍 민족주의는 수년간 퍼져나갔으며 마침내 카이로에서 아랍 회의가 시작됐을 때 마침내 절정에 이르렀습니다. 수많은 아랍 국가 대표들이 이집트 댄서들의 화려한 공연과 대포의 축포로 환영받았으며 협상이 시작되었습니다. \n\n전문가들은 이집트와 하심가 아라비아가 회의를 이끌 것이라고 예상했습니다. 회의는 오스만 제국에 대한 괴로움과 때로는 터키에 대한 아랍의 '추축국'에 대한 토론까지 자유롭게 진행될 것입니다."
-worldnews.17.a:0 "전에 이걸 본 적이 있는거 같은데..."
+worldnews.17.t:0 "카이로 회의"
+worldnews.17.d:0 "Leaders of many countries within the Middle east from [PER.GetNameDef] to Arabia to Tripilotania have gathered in Cairo to discuss the Ottoman issue. Many predict that Egypt will dominate the Congress as she lays out a plan for the middle east without the Ottoman Empire. However time will tell if this will be just sowing the seeds for conflict or peace."
+worldnews.17.a:0 "이런거 예전에 본적이 있는거 같은데 ..."
 
 worldnews.18.t:0 "베오그라드 조약 기구의 비준"
 worldnews.18.desc_rom_gre:0 "협상국의 세 발칸 회원국인 세르비아, 루마니아, 그리스가 그들만의 보복주의 관점을 가지고 협상 테이블에 모여 베오그라드 조약 기구의 시작을 선언했습니다. 이 협약은 문화적인 논의와 발칸 정체성 보존에 많은 비중을 두고 있지만, 그들을 분리시키고 '조상의 영토'를 가지고 있는 국가를 겨냥한 것으로 보이는 회원국 간의 군사 동맹이기도 합니다.\n\n이 새로운 사건은 불가리아의 발칸 지배에 큰 골칫거리지만, 다른 동맹국들의 반응만이 이 조약이 어떤 결실을 맺을 것인지 결정할 것입니다."
@@ -159,7 +159,7 @@ worldnews.36.d:0 "프랑스 코뮌은 세계 생디칼리스트의 주도 국가
 worldnews.36.a:0 "흥미롭군."
 
 worldnews.37.t:0 "제4차 발칸 전쟁"
-worldnews.37.d:0 "세계대전 이후 불가리아인들이 거주하는 모든 영토와 그 주변 영토를 통합한 결과, 발칸 반도의 거인이라 불리는 불가리아가 재탄생했습니다.  모든 불가리아인들을 위한 이 왕국은 세계대전에서 세르비아, 그리스, 루마니아를 패배시키면서 유혈과 전쟁 속에서 태어났고, 이 세 국가의 움직임은 오늘날에도 여전히 불가리아에게 적대적입니다. \n\n이 긴장은 베오그라드 조약 기구의 형성으로 이어졌고, 발칸 국가들의 이 동맹은 이제 차르국에 대한 전쟁을 선포함으로써 이 지역은 다시 전쟁 속으로 빠져버렸습니다. 보리스 3세 차르는 이 압도적인 힘에서 자신의 나라를 구할 수 있을까요? 아니면 그의 왕국은 다시 한 번 나뉠까요?"
+worldnews.37.d:0 "세계대전 이후 불가리아인들이 거주하는 모든 영토와 그 주변 영토를 통합한 결과, 발칸 반도의 거인이라 불리는 불가리아가 재탄생했습니다.  모든 불가리아인들을 위한 이 왕국은 세계대전에서 세르비아, 그리스, 루마니아를 패배시키면서 유혈과 전쟁 속에서 태어났고, 이 세 국가의 움직임은 오늘날에도 여전히 불가리아에게 적대적입니다. \n\n이 긴장은 베오그라드 조약 기구의 형성으로 이어졌고, 발칸 국가들의 이 동맹은 이제 차르국에 대한 전쟁을 선포함으로써 이 지역은 다시 전쟁 속으로 빠져버렸습니다. [BUL.GetLeader]는 이 압도적인 힘에서 자신의 나라를 구할 수 있을까요? 아니면 그의 왕국은 다시 한 번 나뉠까요?"
 worldnews.37.a:0 "발칸은 왜 항상 전쟁이 일어나는 거지?"
 worldnews.37.b:0 "함께라면 승리한다!"
 worldnews.37.c:0 "보리스가 국가를 구할 것이다!"
@@ -411,8 +411,8 @@ worldnews.94.t:0 "제2차 인터내셔널 회의"
 worldnews.94.d:0 "파리에서 개최 된 제1차 생디칼리스트 인터내셔널 회의는 생디칼리즘 운동을 지원하고 기존 생디칼리스트 국가들간의 유대 관계를 강화하는 등 이데올로기 확산을 다루었으며, 모임의 성공덕분에 런던에서 제2차 인터내셔널 회의가 열렸습니다. \n\n전 세계의 대리인은 브리튼 포병대의 축포와 스코틀랜드 백파이프 합창단 및 따뜻한 인사로 환영받았습니다. 유럽이 전쟁에 더 가까워짐에 따라 생디칼리스트들간의 군사적, 경제적 협력이 논의의 주요 주제가 될 것으로 예상되며, 프랑스와 브리튼은 다시 한번 인터내셔널의 정책을 이끌것으로 보입니다."
 worldnews.94.a:0 "흥미롭군."
 
-worldnews.95.t:0 "벨로루시에서의 민족주의자 쿠데타"
-worldnews.95.d:0 "세계대전 이후, 독일인들은 비록 지역 주민들이 이전에는 단 하나의 국가라고 생각한 적은 없었지만, 백러시아 지역에 벨로루시 국가를 형성했습니다. 이러한 민족 정체성의 결여는 독일인들이 이 나라에 그들의 질서를 강요하는것을 멈추게 하지 못했으며, 이로 인해 긴장이 고조되었습니다. \n\n백루테니아의 벨로루시 민족주의자 지도자인 시그문트 (Sigismund)는 전임 왕이 극장 폭발로 사망 한 후 이 나라를 장악했습니다. 시그문트 1세가 독일군에 반항할지, 아니면 독일이 이 새로운 질서를 받아들이기를 기대하면서 기다릴지의 여부는 알기 어렵습니다."
+worldnews.95.t:0 "백루테니아에서의 민족주의자 쿠데타"
+worldnews.95.d:0 "세계대전 이후, 독일인들은 비록 지역 주민들이 이전에는 단 하나의 국가라고 생각한 적은 없었지만, 백러시아 지역에 벨로루시 국가를 형성했습니다. 이러한 민족 정체성의 결여는 독일인들이 이 나라에 그들의 질서를 강요하는것을 멈추게 하지 못했으며, 이로 인해 긴장이 고조되었습니다. \n\n백루테니아의 벨라루스 민족주의자 지도자인 백루테니아의 왕자 시그문트 (Sigismund)는 전임 왕이 극장 폭발로 사망 한 후 이 나라를 장악했습니다. 시그문트 1세가 독일군에 반항할지, 아니면 독일이 이 새로운 질서를 받아들이기를 기대하면서 기다릴지의 여부는 알기 어렵습니다."
 worldnews.95.a:0 "흥미롭군."
 
 worldnews.96.t:0 "리투아니아에서의 친러시아 쿠데타"
@@ -865,7 +865,6 @@ worldnews.197.d:0 "놀라운 운명의 반전으로, 일본 제국은 오늘 만
 worldnews.197.a:0 "해가 저무는군."
 
 worldnews.198.t:0 "한국의 봉기"
-worldnews.198.d.crushed:0 "최근 수십년 동안 일본의 부상은 동아시아의 세력 판도를 크게 뒤엎었고, 1910년 '떠오르는 태양의 나라'가 한국을 병합한 이후 한반도는 일본 본토의 지배를 받게 되었습니다. 그러나 일본의 힘은 한계가 있었고, 한국, 만주, 대만에서의 식민지 동화 시도가 오히려 점령군에 대한 더욱 큰 분노를 초래해 결국 이 사태가 벌어졌습니다. 한반도에서 봉기가 일어난 것입니다.\n\n 블라디보스토크로 망명한 한국 정부를 강력히 탄압하고, 해외에서 활동하는 반군 무장 세력 역시 조기에 일소한 일본은 적은 수의 반군을 쉽게 제압할 수 있었습니다. 이는 완전한 식민지 동화를 피하기 위한 한국인들의 최후의 저항이었습니다. 독립된 한국은 적어도 지금은 먼 꿈으로 남아 있습니다."
 worldnews.198.d:0 "최근 수십년 동안 일본의 부상은 동아시아의 세력 판도를 크게 뒤엎었고, 1910년 '떠오르는 태양의 나라'가 한국을 병합한 이후 한반도는 일본 본토의 지배를 받게 되었습니다. 그러나 일본의 힘은 한계가 있었고, 한국, 만주, 대만에서의 식민지 동화 시도가 오히려 점령군에 대한 더욱 큰 분노를 초래해 결국 이 사태가 벌어졌습니다. 한반도에서 봉기가 일어난 것입니다.\n\n 반군이 해외로부터 무기를 공급받는 것을 막기 위해 일본 정부가 행한 트란스아무르의 소수 민족 탄압에도 불구하고, 현재 한국에서는 대규모의 봉기가 일어났으며 한국인들은 한반도 전역의 전략적 위치를 장악했습니다. 하지만 제국의 대응이 신속할 것이라는 데는 의심의 여지가 없으며, 이에 따라 현지인들의 승리를 주장하는 사람은 거의 없습니다."
 worldnews.198.a:0 "푸른 언덕에 피가 흐를 것이다."
 
