--- a/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
@@ -1353,10 +1353,10 @@ gerdom.80.t:0 "일반 동아시아 회사의 운명"
 gerdom.80.d:0 "독일의 새로운 식민지 정책의 일환으로, 일반 동아시아 회사의 토지를 돌려받았습니다!"
 gerdom.80.a:0 "훌륭하군!"
 
-gerdom.81.t:0 "남 예멘 상황"
+gerdom.81.t:0 "남예멘 상황"
 gerdom.81.d:0 "황제 연방 계획을 실행하기 위해, 우리는 그 계획을 독일 통제 하에 있는 여러 주변 지역에 얼마나 적용할 것인지 결정해야 합니다. 남 예멘이 그러한 지역 중 하나입니다. 황제 해군의 제독들은 이 지역을 직접 지배하면 아덴 만을 통제할 수 있다고 주장했지만, 대부분의 정치인들은 차라리 지배력이 약해지는 것을 감수하면서 이 지역에 대한 지출을 깎을 것을 주장하고 있습니다."
 gerdom.81.a:0 "제한적 자치권 부여하라"
-gerdom.81.b:0 "예멘에게 남 예멘을 양도하라"
+gerdom.81.b:0 "예멘에게 남예멘을 양도하라"
 gerdom.81.c:0 "직접 통치하에 두어라"
 
 gerdom.82.t:0 "독일 제국의 제안"
@@ -1379,7 +1379,7 @@ gerdom.85.b:0 "저항 운동에 도움을 제공하라"
 gerdom.85.c:0 "공개적으로 독일의 행동을 규탄하라!"
 gerdom.85.e:0 "아무 것도 하지 마라"
 
-gerdom.86.t:0 "국제 사회가 우리를 비난하다!"
+gerdom.86.t:0 "인터내셔널이 우리를 비난하다!"
 gerdom.86.d:0 "프랑스 코뮌은 최근 독일 제국 내의 모든 프랑스 조직을 대상으로 한 이 문제에 대해 국제 회의를 열기 위해 행동을 했습니다. 그들은 '독일 제국주의'라고 불렀던 것을 공개적으로 비난하고 제국 내 프랑스 소수파를 보호하기 위해 가능한 모든 것을 다할 것을 약속했습니다. 이에 대해 국제 사회의 몇몇 중요한 회원국은 프랑스 국민에 대한 우리의 행동을 비난하면서 이와 같은 행동이 현대 국가의 명예에 얼룩을 남기는 일이라고 지적했습니다. 우리는 이 공식적인 굴욕에 어떻게 대처해야 할까요?"
 gerdom.86.a:0 "코뮌 지지자가 배후에 있다. 그들을 말살하라!"
 gerdom.86.b:0 "모든 항의를 무시하라!"
@@ -1398,12 +1398,12 @@ gerdom.91.t:0 "독일 군사 사절단이 돈-쿠반 연합에 도착하다"
 gerdom.91.d:0 "우리의 구식 군대의 개선을 돕기 위해 독일 제국이 우리 조국에 군사 사절단 파견을 결정했습니다."
 gerdom.91.a:0 "대단하군!"
 
-gerdom.92.t:0 "레토프-포어벡과 독일 저항의 불길"
+gerdom.92.t:0 "레토프-포어베크와 독일 저항의 불길"
 gerdom.92.d:0 "지금은 독일 제국의 가장 암울한 시기입니다. 제국 정부는 적군의 비행기, 전차, 전술에 패배하여 베를린을 떠났고, 셸쇼크와 망상에 빠진 상태로 다르에스살람에 모였습니다. 하지만, 군대는 독일 군대가 아닙니다! 그리고 아프리카의 하늘 아래에서 우리의 식민지들은 전쟁에 전념하고 있습니다. 그러나 정부는 독일군 사상 최대의 재앙을 불러일으켰다는 의혹에 직면해 있고 육군 장교들은 새로운 임시 재상의 임명을 요구하고 있습니다. 그 중 상당수는 세계대전에서 보여줬던 성공과 그가 지휘하는 원주민 부대들의 충성심과 애정을 감안하면 파울 폰 레토프-포어베크가 그 직책에 맞다고 요구했습니다."
 gerdom.92.a:0 "좋다! 폰 레포트-포어벡을 임명하라! 하이아 사파리(Heia Safari)!"
 gerdom.92.b:0 "안 된다! 그것은 우리 민주주의의 관에 마지막 못이 될 것이다!"
 
-gerdom.93.t:0 "레토프-포어벡이 ‘아프리카 군단’ 재건을 제안하다"
+gerdom.93.t:0 "레토프-포어베크가 ‘아프리카 군단’ 재건을 제안하다"
 gerdom.93.d:0 "레토프-포어베크 재상은 비상 정부 앞에 서서 아스카리로 알려진 원주민 보호부대를 더 많이 만들어야 한다고 주장했습니다. 이 용맹한 군인들은 재상이 세계대전 동안 동아프리카의 정글에서 협상국을 한 수 앞섰던 때부터 라이히에 충성을 다했습니다. 또한 폰 레토프-포어베크는 조국을 되찾는다면 독일 밑에서 아프리카를 다스리던 원주민 왕, 종속국을 완전히 독립시킬 것을 제안했습니다. 이러한 보상은 원주민들과 그 지도자들에게 동기를 부여하고 그들을 북돋아서 우리가 베를린으로 갈 수 있도록 도와줄 것입니다. 이는 암울한 제안이지만, 제국은 더 암울한 시기를 보내고 있습니다."
 gerdom.93.a:0 "미틀아프리카 전역에서 아스카리를 결집하라!"
 gerdom.93.b:0 "쓸모 없군, 우리는 독일의 전쟁을 위한 독일의 군대가 필요하다!"
@@ -2278,7 +2278,7 @@ gerfor.181.d:0 "오늘 양국 관계를 개선하고자 독일 외교 사절이 
 gerfor.181.a:0 "물론 우리는 동의할 것이다!"
 gerfor.181.b:0 "이것은 우리의 이익이 아니다."
 
-gerfor.182.t:0 "[From.GetNameDefCap]이(가) 거절하다"
+gerfor.182.t:0 "[From.GetNameDefCap]이/가 거절하다"
 gerfor.182.d:0 "독일 외교가 [From.GetAdjective]의 수도에서 날을 보내며 [From.GetAdjective]의 공무원들에게 우리의 선한 의도를 확신시키려고 시도했지만, 그들은 [GER.GetNameDef]와 [From.GetNameDef] 사이의 관계를 따뜻하게 할 그 어떠한 의도도 거절했습니다."
 gerfor.182.a:0 "불행한 사람이군."
 
@@ -2297,7 +2297,7 @@ gerfor.189.a:0 "너무 늦었어..."
 
 ### Flavour Events ###
 
-gerdom.101.t:0 "대 성전"
+gerdom.101.t:0 "대성전"
 gerdom.101.d:0 "우익 단체들은 코뮌 지지자들이 프랑스 본토에서 합법적인 정부를 몰아낸 이후로 줄곧 프랑스 코뮌에 성전을 선포해야 한다고 요구했습니다. 이제 그들의 소원이 마침내 이루어졌습니다. 영광스러운 조국과 생디칼리즘 독사의 둥지 간에 전쟁이 벌어졌기 때문입니다. 카이저 빌헬름 2세가 라디오를 통해 독일과 프랑스 사이에 다시 전쟁이 벌어진 이유를 설명하고 "양지"를 얻어내기 위한 최종 장애물을 제거하자고 연설한 후, 젊은 독일인 수천 명이 황제의 손자 뒤를 따라 서둘러 입대했으며 민간인들은 거리에 모여 전쟁을 지지한다고 나타냈습니다. 끔찍한 위기가 지난 후, 독일은 다시 한번 단결했습니다. 독일 만세! 황제 폐하 만세!"
 gerdom.101.a:0 "신이시여 카이저를 수호하소서! 우리는 승리한다!"
 
@@ -2356,7 +2356,7 @@ GER_Frankfurt:0 "프랑크푸르트"
 GER_Hamburg:0 "함부르크"
 GER_Essen:0 "에센"
 GER_Munich:0 "뮌헨"
-GEX_becomes_GER:0 "§Y[GEX.GetNameDefCap]§!은 §Y[GER.GetNameDef]§!이 될것입니다."
+GEX_becomes_GER:0 "§Y[GEX.GetNameDefCap]§!은/는 §Y[GER.GetNameDef]§!이/가 될 것입니다."
 
 gerfla.12.t:0 "베를린으로 귀환"
 gerfla.12.d:0 "베를린은 한번더 [GEX.GetNameDef]의 부분이 되었습니다. 우리는 이제 정부를 제국의회에 있는 적절한 장소로 되돌려 보낼 수 있습니다."
@@ -2370,30 +2370,30 @@ germit.1.a:0 "우리도 참가한다!"
 germit.1.b:0 "'봉신 동맹국'이라고, 엉?"
 germit.1.c:0 "오 맙소사, 당연히 아니다!"
 
-germit.2.t:0 "[From.GetName](이)가, 오이호파마르크화 사용 동의"
-germit.2.d:0 "[From.GetName]은(는) 제국 조약에 대한 단일 통화 제안에 동의했으며, 이제부터는 오이호파마르크화를 사용할 것입니다."
+germit.2.t:0 "[From.GetName]이/가, 오이로파마르크화 사용 동의"
+germit.2.d:0 "[From.GetName]은/는 제국 조약에 대한 단일 통화 제안에 동의했으며, 이제부터는 오이로파마르크화를 사용할 것입니다."
 germit.2.a:0 "좋았어!"
 
-germit.3.t:0 "[From.GetName](이)가, 오이호파마르크화 사용 거부"
+germit.3.t:0 "[From.GetName]이/가, 오이로파마르크화 사용 거부"
 germit.3.d:0 "[From.GetName] 모든 제국 조약에 대해 단일 통화에 대한 우리의 제안을 거부했으며 마르크와 연결되어 있음에도 불구하고 계속해서 자신의 통화를 사용할 것이라고 공개적으로 언급했습니다."
 germit.3.a:0 "제기랄!"
 
-germit.4.t:0 "오이호파마르크 폐지"
+germit.4.t:0 "오이로파마르크 폐지"
 germit.4.d:0 "최근의 발전에 비추어, 마르크는 더 이상 우리의 공식 통화가 아닙니다. 필연적으로 경제적인 격변을 야기할지라도 궁극적으로 최선의 결과가 될 것입니다. 결국, 우리는 우리 자신의 통화를 다시 가지게 되었습니다!"
 germit.4.a:0 "그러길 바라지..."
 
-germit.5.t:0 "오이호파마르크화로 환전"
+germit.5.t:0 "오이로파마르크화로 환전"
 germit.5.d:0 "제국 조약의 신입 회원국으로서 우리 경제를 무역 블록의 경제와 맞춰야 할 의무가 있습니다. 이는 단일 통화에 가입하는 것을 의미합니다. 우리 나라는 마르크로 환전함으로써 제국 조약의 많은 행정적 이익을 활용할 수는 있겠지만 국가 주권의 상실은 숨기기가 다소 어려울 것입니다."
 germit.5.a:0 "내가 생각하기엔 거래의 일부일 뿐이다."
 germit.5.b:0 "우리에게는 선택의 여지가 없다."
 germit.5.c:0 "왜 우리가 우리 통화를 포기한 거지?"
 
 germit.6.t:0 "유럽의회 회원국"
-germit.6.d:0 "제국 조약 회원이 정한 단일 오이호파마르크화 통화의 일원으로서, 우리는 유럽의회에 가입함으로써 블록의 대다수와 맞춰야 할 의무가 있습니다. 이 기구, '유럽 의회'는 무역을 규제하기 위해 존재하며 향후 통합의 핵심적인 부분입니다."
+germit.6.d:0 "제국 조약 회원이 정한 단일 오이로파마르크화 통화의 일원으로서, 우리는 유럽의회에 가입함으로써 블록의 대다수와 맞춰야 할 의무가 있습니다. 이 기구, '유럽 의회'는 무역을 규제하기 위해 존재하며 향후 통합의 핵심적인 부분입니다."
 germit.6.a:0 "건전한 제안."
 
 germit.7.t:0 "유럽 위원회 회원국"
-germit.7.d:0 "제국 조약 국가는 이제 블록의 적절한 부분으로서 오이호파마르크화의 형태로 공동 통화를 사용하지만, 국가는 유럽 위원회의 관할 아래에 들어가야 합니다. 이 기구는 분명히 독일 제국에 유리하게 편향되어 있지만, 대륙 전역의 산업 규칙을 규제합니다."
+germit.7.d:0 "제국 조약 국가는 이제 블록의 적절한 부분으로서 오이로파마르크화의 형태로 공동 통화를 사용하지만, 국가는 유럽 위원회의 관할 아래에 들어가야 합니다. 이 기구는 분명히 독일 제국에 유리하게 편향되어 있지만, 대륙 전역의 산업 규칙을 규제합니다."
 germit.7.a:0 "우리는 가입해야 합니다."
 
 germit.8.t:0 "유럽 여단 제안"
@@ -2402,19 +2402,19 @@ germit.8.a:0 "필요하다면."
 germit.8.b:0 "선택의 여지가 있니?"
 germit.8.c:0 "단순한 광기일 뿐이다."
 
-germit.9.t:0 "[From.GetName] 유럽 여단 프로그램 수락"
-germit.9.d:0 "우리의 새로운 유럽 여단 계획은 제국 조약 '동맹국'이 국제 사단의 일원으로 귀중한 군인들을 포기하고 우리 군에 배치하도록 하는 독창적인 아이디어입니다. [From.GetName]은 현명하게 우리의 압력을 받아들이기로 결정하고 계획에 서명했습니다. 신병 모집은 훨씬 쉽게 이루어져야합니다."
+germit.9.t:0 "[From.GetName]의 유럽 여단 프로그램 수락"
+germit.9.d:0 "우리의 새로운 유럽 여단 계획은 제국 조약 '동맹국'이 국제 사단의 일원으로 귀중한 군인들을 포기하고 우리 군에 배치하도록 하는 독창적인 아이디어입니다. [From.GetName]은/는 현명하게 우리의 압력을 받아들이기로 결정하고 계획에 서명했습니다. 신병 모집은 훨씬 쉽게 이루어져야합니다."
 germit.9.a:0 "훌륭해!"
 
-germit.10.t:0 "[From.GetName] 유럽 여단 프로그램을 거부 함"
-germit.10.d:0 "우리의 새로운 유럽 여단 계획은 제국 조약 '동맹국'이 국제 사단의 일원으로 귀중한 군인들을 포기하고 우리 군에 배치하도록 하는 독창적인 아이디어입니다. [From.GetName]은 안타깝게도 우리의 압박에 굴하지 않고 새로운 계획에 참여하지 않기로 결정하여 제국 조약 통합 노력에 해를 주었습니다."
+germit.10.t:0 "[From.GetName]의 유럽 여단 프로그램 거부"
+germit.10.d:0 "우리의 새로운 유럽 여단 계획은 제국 조약 '동맹국'이 국제 사단의 일원으로 귀중한 군인들을 포기하고 우리 군에 배치하도록 하는 독창적인 아이디어입니다. [From.GetName]은/는 안타깝게도 우리의 압박에 굴하지 않고 새로운 계획에 참여하지 않기로 결정하여 제국 조약 통합 노력에 해를 주었습니다."
 germit.10.a:0 "자극하는군."
 
 germit.11.t:0 "유럽 여단"
 germit.11.d:0 "제국 조약의 신입 회원으로서 우리는 유럽 여단에 가입해야 합니다. 이것은 우리가 군대 인구 중 일정 비율을 국제 사단을 위해 독일의 통치 하에 배치해야 한다는 것을 의미합니다."
 germit.11.a:0 "내가 생각하기에 우리 회비의 일부같다."
 germit.11.b:0 "좋아, 그럼..."
-germit.11.c:0 "누가 이걸 누가 요리 했니?"
+germit.11.c:0 "누가 이걸 요리했지?"
 
 germit.12.t:0 "제국 조약을 떠나다"
 germit.12.d:0 "제국 조약의 회원 자격으로 우리는 무역 및 상호 방위와 같은 몇 가지 혜택을 받는 동시에 많은 의무를 지고 이 블록에 대단히 통합되었습니다. 불행히도 이제는 이 덩굴손을 우리 국가에서 풀어 내려고 노력할 시간이 왔습니다."
